# citadel

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py
apps/api/app/: main.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/routes/: chat.py  documents.py  evals.py  health.py  ingest.py  providers.py  retrieval.py
apps/api/app/config/: settings.py
apps/api/app/core/: dependencies.py  logging.py  security.py
apps/api/app/db/: session.py
apps/api/app/models/: entities.py
apps/api/app/repositories/: documents.py  runs.py
apps/api/app/schemas/: chat.py  common.py  documents.py  evals.py  ingestion.py  providers.py
apps/api/app/scripts/: run_eval.py  seed_corpus.py
apps/api/app/services/chat/: debug_orchestrator.py  service.py
apps/api/app/services/citations/: service.py
apps/api/app/services/evals/: service.py
apps/api/app/services/graph/: service.py
apps/api/app/services/ingestion/: service.py
apps/api/app/services/observability/: service.py
apps/api/app/services/policy/: guardrails.py
apps/api/app/services/providers/: service.py
apps/api/app/services/reranking/: service.py
apps/api/app/services/retrieval/: pipeline.py
apps/api/app/utils/: hashing.py  text.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_query_api.py
apps/api/tests/smoke/: test_health.py
apps/api/tests/unit/: test_citations.py  test_graph_expansion.py
(+56 files in other folders)
